--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,13 @@ buildscript {
     ext.anko_version = '0.8.2'
     ext.support_version = '25.3.1'
     repositories {
+        google()
         jcenter()
         maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
+        classpath 'com.android.tools.build:gradle:3.6.4'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
-        classpath 'me.tatarka:gradle-retrolambda:3.2.0'
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -20,6 +19,7 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
         maven { url 'https://jitpack.io' }
     }
