--- a/CommandMaps/build.gradle
+++ b/CommandMaps/build.gradle
@@ -4,7 +4,7 @@ group = rootProject.ext.group
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.auto.service:auto-service-annotations:1.0.1'
 }
 
 sourceCompatibility = "1.7"
