--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,11 +35,11 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'androidx.annotation:annotation:1.3.0'
 
-    implementation project(':CommandMaps')
-    annotationProcessor project(':CommandMapsCompiler')
+//    implementation project(':CommandMaps')
+//    annotationProcessor project(':CommandMapsCompiler')
 
-//    implementation 'com.github.TonyTangAndroid.CommandsMap:CommandMaps:1.0.4'
-//    annotationProcessor 'com.github.TonyTangAndroid.CommandsMap:CommandMapsCompiler:1.0.4'
+    implementation 'com.github.TonyTangAndroid.CommandsMap:CommandMaps:1.0.4'
+    annotationProcessor 'com.github.TonyTangAndroid.CommandsMap:CommandMapsCompiler:1.0.4'
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'com.google.truth:truth:1.1.3'
