--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,15 +38,16 @@ dependencies {
     implementation project(':CommandMaps')
     annotationProcessor project(':CommandMapsCompiler')
 
-//    implementation 'com.github.TonyTangAndroid.CommandsMap:CommandMaps:1.0.2'
-//    annotationProcessor 'com.github.TonyTangAndroid.CommandsMap:CommandMapsCompiler:1.0.2'
+//    implementation 'com.github.TonyTangAndroid.CommandsMap:CommandMaps:1.0.4'
+//    annotationProcessor 'com.github.TonyTangAndroid.CommandsMap:CommandMapsCompiler:1.0.4'
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'com.google.truth:truth:1.1.3'
     testImplementation 'org.robolectric:robolectric:4.6.1'
     testImplementation 'androidx.test.ext:junit:1.1.3'
+
     androidTestImplementation 'com.google.truth:truth:1.1.3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation ('androidx.test.espresso:espresso-core:3.4.0')
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
 }
