--- a/CommandMapsCompiler/build.gradle
+++ b/CommandMapsCompiler/build.gradle
@@ -3,6 +3,7 @@ sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
 dependencies {
     compile project(':CommandMaps')
+    compile project(':compiler_model')
     compile 'com.google.auto.service:auto-service-annotations:1.0.1'
     annotationProcessor 'com.google.auto.service:auto-service:1.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.2.21'
