--- a/CommandMapsCompiler/build.gradle
+++ b/CommandMapsCompiler/build.gradle
@@ -1,4 +1,8 @@
-apply plugin: 'java'
+plugins {
+    id 'org.jetbrains.kotlin.jvm'
+    id 'org.jetbrains.dokka'
+}
+
 sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
 dependencies {
