--- a/compiler_model/build.gradle
+++ b/compiler_model/build.gradle
@@ -1,7 +1,11 @@
-apply plugin: 'java'
+plugins {
+  id 'org.jetbrains.kotlin.jvm'
+  id 'org.jetbrains.dokka'
+}
 sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
 dependencies {
+  implementation deps.kotlin.stdlib
 }
 
 
